rollout/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: ktor-sample
spec:
  replicas: 5
  strategy:
    canary:
      steps:
      - setWeight: 10
      - pause: {duration: 10}
      - setWeight: 50
      - pause: {duration: 10}
      - setWeight: 100
      - pause: {duration: 10}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ktor-sample
  template:
    metadata:
      labels:
        app: ktor-sample
    spec:
      containers:
      - name: ktor-sample
        image: vishal4590/ktor-sample:v1
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
