rollout/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ktor-sample
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: ktor-sample
